# Camera

./: .gitignore  Android.mk  README.md  build.gradle  config.gradle  freemeCamConfig.xml  settings.gradle
Part3rd/Baidu/BaiduLBS_AndroidSDK_Lib/: BaiduLBS_AndroidSDK_Lib.aar  build.gradle
Part3rd/Baidu/bd_aip/: build.gradle  consumer-rules.pro
Part3rd/Bytedance/effect_core/: build.gradle
PartFreeme/Mode/Photo/effect/: build.gradle
PartFreeme/Mode/Photo/effectphoto/: build.gradle
PartFreeme/Utils/common/: build.gradle
PartFreeme/Utils/help/: build.gradle
PartFreeme/Utils/libbitmap/: build.gradle
PartFreeme/Utils/libslrblur/: build.gradle  consumer-rules.pro
PartFreeme/Utils/libyuv/: CMakeLists.txt  build.gradle
PartFreeme/Utils/zbar/: build.gradle  consumer-rules.pro
PartFreeme/Utils/zbar/src/main/cpp/: CMakeLists.txt
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/: CMakeLists.txt  config.h  config.status  libtool
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/lib/: libcharset.so.1.0.0
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/lib/.libs/: libiconv.so.2.6.1
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/libcharset/: config.status  libtool
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/po/: Makefile  Makefile.in
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/src/: Makefile  iconv_no_i18n
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/src/.libs/: iconv_no_i18n
PartFreeme/Utils/zbar/src/main/cpp/libiconv-1.16/srclib/: Makefile
PartFreeme/Utils/zbar/src/main/cpp/zbar/: FREEME_README
PartFreeme/common/: build.gradle
PartFreeme/common/src/main/: AndroidManifest.xml
PartSprd/android-ex-camera2-portability/: build.gradle
PartSprd/android-ex-camera2-portability/src/main/: AndroidManifest.xml
PartSprd/android-ex-camera2-utils/: build.gradle
PartSprd/app/: build.gradle  proguard-rules.pro
(+1027 files in other folders)
